# spark_config_mapper

./: .gitignore  README.md  pyproject.toml
config/: __init__.py
implementation/: AI_ASSISTED_CONFIG_GENERATION.md  FUTURE_CONSIDERATIONS.md  LOGGING.md  OMOP_CONCEPT_MAPPER_PROPOSAL.md  README.md  spark_config_mapper_reference.md  spark_config_mapper_tutorial.md
implementation/the_config-files/: 000-config-example.yaml  config-RWD.yaml  config-global.yaml
schema/: __init__.py  discovery.py  mapper.py
spark_config_mapper/: __init__.py  header.py  logging_config.py
spark_config_mapper/config/: __init__.py  loader.py  validation.py
spark_config_mapper/schema/: __init__.py  mapper.py
spark_config_mapper/utils/: __init__.py  introspection.py  list_ops.py  pandas.py  parameters.py  spark_ops.py
tests/: test_flatten_schema.py  test_recursive_template.py
utils/: introspection.py  parameters.py  spark_ops.py
